# An_nn

./: CMakeLists.txt  README.md
include/: .matrix.hpp.swp  layer.hpp  matrix.hpp  neural_net.hpp  neuron.hpp
include/utils/: math.hpp  matrixToVector.hpp  multiplyMatrix.hpp
src/: .matrix.cpp.swp  backpropagation.cpp  layer.cpp  main.cpp  matrix.cpp  neural_net.cpp  neuron.cpp
src/utils/: maths.cpp  matrixToVector.cpp  multiplyMatrix.cpp
